--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="jamesm2w's Parliament Diagram" />
   <meta property="og:description"
     content="Generate and download SVG Arch Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="https://parliament.jamesm2w.me/card_image.png" />
   <meta property="og:site_name" content="jamesm2w/ParliamentDiagram">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
