--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="twitter:creator" content="@jamesm2w" />
   <meta name="twitter:site" content="@jamesm2w" />
   <meta name="twitter:image:alt" content="An arch of 50 circles in 4 rows. 25 coloured red, and 25 coloured blue." />
-  <meta property="og:url" content="src/assets/card_image.png" />
+  <meta property="og:url" content="https://parliament.jamesm2w.me/" />
   <meta property="og:title" content="jamesm2w's Parliament Diagram" />
   <meta property="og:description"
     content="Generate and download SVG Arch Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
