Update with new branding

--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
   <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png">
   <link rel="icon" href="src/assets/favicon.ico" />
 
-  <meta name="title" content="jamesm2w's Parliament Diagram" />
+  <meta name="title" content="Arches - Create Parliament Diagrams" />
   <meta name="description"
     content="Generate and download Arch Diagrams SVG to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
   <meta name="keywords" content="parliament, diagram, arch, jamesm2w, politics, house, senate, legislature" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="language" content="English" />
-  <meta name="author" content="jamesm2w" />
+  <meta name="author" content="james" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:creator" content="@jamesm2w" />
-  <meta name="twitter:site" content="@jamesm2w" />
   <meta name="twitter:image:alt" content="An arch of 50 circles in 4 rows. 25 coloured red, and 25 coloured blue." />
-  <meta property="og:url" content="https://parliament.jamesm2w.me/" />
-  <meta property="og:title" content="jamesm2w's Parliament Diagram" />
+  <meta property="og:url" content="https://arches.elexn.uk/" />
+  <meta property="og:title" content="Arches Elexn UK" />
   <meta property="og:description"
     content="Generate and download SVG Arch Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
-  <meta property="og:image" content="https://parliament.jamesm2w.me/card_image.png" />
-  <meta property="og:site_name" content="jamesm2w/ParliamentDiagram">
+  <meta property="og:image" content="https://arches.elexn.uk/card_image.png" />
+  <meta property="og:site_name" content="Arches Elexn UK">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>jamesm2w's Parliament Diagram</title>
+  <title>Arches Elexn UK - Create Parliament Diagrams</title>
 </head>
 <body class="font-sans bg-gray-100">
   <div id="app"></div>
