New toggle button

--- a/westminster/index.html
+++ b/westminster/index.html
@@ -8,9 +8,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png">
   <link rel="icon" href="src/assets/favicon.ico" />
 
-  <meta name="title" content="Arches - Create Parliament Diagrams" />
+  <meta name="title" content="Westminster Style - Create Parliament Diagrams" />
   <meta name="description"
-    content="Generate and download Arch Diagrams SVG to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
+    content="Generate and download Westminster style Diagrams SVG to represent parliaments or other legislatures with seats coloured by political parties or groupings organised in two main rows with a crossbench." />
   <meta name="keywords" content="parliament, diagram, arch, jamesm2w, politics, house, senate, legislature, westminster, maker, creator" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,15 +18,15 @@
   <meta name="author" content="james" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="An arch of 50 circles in 4 rows. 25 coloured red, and 25 coloured blue." />
-  <meta property="og:url" content="https://arches.elexn.uk/" />
-  <meta property="og:title" content="Arches Elexn UK" />
+  <meta property="og:url" content="https://arches.elexn.uk/westminster/" />
+  <meta property="og:title" content="Elexn / Arches / Westminster" />
   <meta property="og:description"
     content="Generate and download SVG Arch Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
-  <meta property="og:image" content="https://arches.elexn.uk/card_image.png" />
-  <meta property="og:site_name" content="Arches Elexn UK">
+  <meta property="og:image" content="https://arches.elexn.uk/westminster_card_image.png" />
+  <meta property="og:site_name" content="Elexn / Arches / Westminster">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Arches - Create Parliament Diagrams</title>
+  <title>Westminster Style - Create Parliament Diagrams</title>
 </head>
 <body class="font-sans bg-gray-100">
   <div id="app"></div>
