--- a/westminster/index.html
+++ b/westminster/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="manifest" href="src/assets/site.webmanifest">
-  <link rel="apple-touch-icon" sizes="180x180" href="src/assets/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon-16x16.png">
-  <link rel="icon" href="src/assets/favicon.ico" />
+  <link rel="manifest" href="/src/assets/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png">
+  <link rel="icon" href="/src/assets/favicon.ico" />
 
   <meta name="title" content="Westminster Style - Create Parliament Diagrams" />
   <meta name="description"
