--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <meta name="title" content="Arches - Create Parliament Diagrams" />
   <meta name="description"
-    content="Generate and download Arch Diagrams SVG to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
-  <meta name="keywords" content="parliament, diagram, arch, jamesm2w, politics, house, senate, legislature, westminster, maker, creator" />
+    content="Generate and download SVG Arch Diagrams and Westminster Parliament Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
+  <meta name="keywords" content="parliament, diagram, arch, westminster, jamesm2w, politics, house, senate, legislature, westminster, maker, creator, commons" />
   <meta name="robots" content="index, follow" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="language" content="English" />
@@ -19,11 +19,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="An arch of 50 circles in 4 rows. 25 coloured red, and 25 coloured blue." />
   <meta property="og:url" content="https://arches.elexn.uk/" />
-  <meta property="og:title" content="Arches Elexn UK" />
+  <meta property="og:title" content="Arches - Create Parliament Diagrams" />
   <meta property="og:description"
-    content="Generate and download SVG Arch Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
+    content="Generate and download SVG Arch Diagrams and Westminster Parliament Diagrams to represent parliaments or other legislatures with seats coloured by political parties or groupings." />
   <meta property="og:image" content="https://arches.elexn.uk/card_image.png" />
-  <meta property="og:site_name" content="Arches Elexn UK">
+  <meta property="og:site_name" content="arches elexn uk">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arches - Create Parliament Diagrams</title>
